# sundayrec

./: .env.example  .gitignore  .prettierignore  Cargo.toml  README.md  audit.json  electron.vite.config.ts  eslint.config.js  index.html  jest.config.ts  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  tsconfig.web.json  vite.config.ts  vitest.config.ts
.cargo/: audit.toml  config.toml
.github/workflows/: build.yml  ci.yml  release.yml
__mocks__/: electron-store.ts  electron.ts
assets/: entitlements.mac.plist  icon.icns
assets/logo-options/: preview.html
crates/sundayrec-core/: Cargo.toml
crates/sundayrec-core/src/: audio.rs  audio_analysis.rs  capture.rs  companion.rs  device_enum.rs  device_match.rs  diagnostics.rs  editor.rs  errors.rs  ffmpeg.rs  filename.rs  history.rs  levels.rs  lib.rs  link.rs  mastering.rs  ndi.rs  overlay.rs  preflight.rs  prep.rs  preroll.rs  processing.rs  progress.rs  reconnect.rs  recorder.rs  recovery.rs  review_queue.rs  schedule.rs  selftest.rs  settings.rs  silence.rs  streaming.rs  timeouts.rs  tray.rs  two_process.rs  wake.rs  webhook.rs  whisper.rs
crates/sundayrec-core/src/cloud/: drive.rs  mod.rs  oauth.rs  queue.rs  retry.rs
crates/sundayrec-core/src/integrations/: live_bridge.rs  mod.rs  plan.rs  settings.rs  song.rs  stage.rs  verbatim.rs
docs/: ASIO-TEST-MATRIX.md  BACKLOG-AUDIT-2026-07-07.md  BUILD_ASIO.md  COMPLETION.md  DISTRIBUTION.md  EDITOR-PORT.md  GOOGLE-OAUTH-SETUP.md  MIGRATION-TAURI2.md  NATT-AUDIT-2026-06-07.md  NATT-LYD-VIDEO.md  NATT-LYD-VU-PREKEN-2026-06-14.md  NATT-SEAM-AUDIT.md  NEEDS-RICHARD.md  PARITY-BACKEND.md  PHASE6.md  PRO-AUDIO-WINDOWS.md  RELEASE-AUDIT.md  RELEASE-CHECKLIST.md  SMOKE-TEST.md  VIDEO-RESOLUTION-GATING.md  WINDOWS-RIGG-START.md
docs/archive/: RELEASE-AUDIT-2026-06-01.md
legacy/bindings/: AsioDevice.ts  AudioBackendKind.ts  AudioChannel.ts  CompanionChapter.ts  DiagnosticFinding.ts  DiagnosticSeverity.ts  DiagnosticsInput.ts  DiagnosticsReport.ts  EditorAudioExtract.ts  EditorFileRead.ts  LastErrorInfo.ts  RecordingOpts.ts  RecordingTelemetry.ts  SelfTestFacts.ts  SelfTestReport.ts  SelfTestVerdict.ts  SermonCompanion.ts  SermonHighlight.ts  Settings.ts  SettingsSummary.ts  SummarySource.ts  TaggedAudioInput.ts
legacy/locales/: da.json  de.json  en.json  fr.json  no.json  parity.test.ts  pl.json  sv.json
legacy/renderer/: api-shim.ts  i18n.ts  index.html  main.ts  styles.css  time-input.ts
legacy/renderer/audio/: waveform.ts
legacy/renderer/pages/: audio-page.ts  calendar-page.ts  editor-companion.ts  editor-page.ts  editor-transcript.ts  files-page.ts  general-page.ts  home.ts  integrations-page.ts  onboarding.ts  publish-page.ts  recording.ts  review-queue-home.ts  schedule-page.ts  video-page.ts
legacy/types/: index.ts
reference/bindings/: EditorExportRequest.ts  Settings.ts
scripts/: check-version-sync.mjs  ci-local.sh  fetch-ffmpeg.mjs  ffmpeg-checksums.json  sync-bindings.mjs
src/: App.test.tsx  App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json
src-tauri/examples/: asio_spike.rs
src-tauri/migrations/: 0002_recording_note.sql  0004_wake_failure.sql
src-tauri/src/: error.rs  lib.rs  main.rs  util.rs
src-tauri/src/audio/: asio.rs  devices.rs  mod.rs  vu.rs
src-tauri/src/bridge_live/: mod.rs
src-tauri/src/cloud/: mod.rs  oauth_flow.rs  store.rs  worker.rs
src-tauri/src/commands/: account.rs  app.rs  audio.rs  bridge.rs  bridge_live.rs  calendar.rs  cloud.rs  companion.rs  db.rs  editor.rs  integrations.rs  media.rs  mod.rs  ndi.rs  path_guard.rs  publish.rs  recorder.rs  review.rs  settings.rs  wake.rs  whisper.rs
src-tauri/src/db/: store.rs
src-tauri/src/diagnostics/: mod.rs
src-tauri/src/editor/: mod.rs
src-tauri/src/email/: mod.rs
src-tauri/src/media/: ffmpeg.rs  mod.rs  permissions.rs  preview.rs
src-tauri/src/ndi/: mod.rs  sender.rs
src-tauri/src/platform/: mod.rs
src-tauri/src/publish/: mod.rs
src-tauri/src/recorder/: asio.rs  concat.rs  cpal_capture.rs  engine.rs  mod.rs  preroll.rs  recovery.rs  two_process.rs
src-tauri/src/scheduler/: mod.rs
src-tauri/src/secrets/: mod.rs
src-tauri/src/settings/: mod.rs
src-tauri/src/streaming/: mod.rs
src-tauri/src/test_recording/: mod.rs
src-tauri/src/tray/: mod.rs
src-tauri/src/update/: mod.rs
src-tauri/src/wake/: mod.rs
src-tauri/src/whisper/: mod.rs
src/components/: CommandPalette.tsx  LanguageSwitcher.tsx  MainLayout.test.tsx  MainLayout.tsx  Toast.test.tsx  Toast.tsx
src/design/: Icon.tsx  atoms.tsx  hooks.test.ts  hooks.ts  tokens.css
src/design/screens/: EditScreen.test.tsx  EditScreen.tsx  HomeScreen.test.tsx  HomeScreen.tsx  LiveScreen.test.tsx  LiveScreen.tsx  RecordingScreen.test.tsx  RecordingScreen.tsx  ScheduleScreen.test.tsx  ScheduleScreen.tsx  SearchScreen.test.tsx  SearchScreen.tsx  SettingsScreen.test.tsx  SettingsScreen.tsx  editor.helpers.test.ts  editor.helpers.ts  editorOpen.ts  home.helpers.test.ts  home.helpers.ts  live.helpers.ts  schedule.helpers.ts  search.helpers.ts  settings.helpers.ts  settingsTab.ts
src/features/cloud/: CloudBackupPanel.test.tsx  CloudBackupPanel.tsx
src/features/devices/: DevicePicker.test.tsx  DevicePicker.tsx
src/features/diagnostics/: DiagnosticsPanel.tsx  FfmpegHealth.test.tsx  FfmpegHealth.tsx
src/features/editor/: EditorCanvas.test.tsx  EditorCanvas.tsx  EditorPanel.test.tsx  EditorPanel.tsx  waveform.ts
src/features/email/: EmailSettingsPanel.tsx
src/features/history/: HistoryPanel.test.tsx  HistoryPanel.tsx  queryKey.ts
src/i18n/: i18n.test.tsx  index.ts
src/lib/: routing.ts
src/locales/: da.json  de.json  en.json  fr.json  no.json  pl.json  sv.json
src/main/: index.ts  mailer.ts  recorder-utils.ts  recorder.ts  scheduler.ts  store.ts  tray.ts  updater.ts  wake.ts
src/preload/: index.ts
src/renderer/: helpers.ts  i18n.ts  index.html  main.ts  state.ts  styles.css
src/shared/: church-calendar.ts
src/types/: index.ts
tests/: church-calendar.test.ts  filename.test.ts  recorder-utils.test.ts  setup.ts  store.test.ts
(+75 files in other folders)
