[package]
name = "sundayrec-core"
version = "0.1.0"
description = "Pure, GUI-free domain core for SundayRec — recorder logic, ffmpeg argument building, error classification, silence state machine. No Tauri dependency."
authors = ["Richard Fossland"]
edition = "2021"

# This crate intentionally depends on NOTHING from Tauri. It holds the
# behaviour ported from the Electron `recorder-utils.ts` etc. as plain,
# deterministic Rust so it can be exercised entirely under `cargo test`.

# Feature flags. `ndi` is a NO-OP here: the pure NDI logic in `src/ndi.rs`
# (source-name validation, the `libndi_newtek` output-arg builder, the
# `ffmpeg -muxers` capability parser) is ALWAYS compiled because it has no
# hardware/SDK dependency. The flag exists only to mirror the `src-tauri` `ndi`
# feature so `--features ndi` is accepted symmetrically across the workspace;
# the actual SDK/runtime gate lives in the `src-tauri` seam. See `src/ndi.rs`.
[features]
ndi = []

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
# Generates the TypeScript bindings the frontend consumes. `serde-compat`
# makes ts-rs honour serde attributes (rename_all, etc.). Run the export with
# `cargo test export_bindings -p sundayrec-core`.
ts-rs = { version = "12", features = ["serde-compat"] }
# Civil date/time arithmetic for the scheduler (Fase 5) AND HTTP-date parsing
# of the cloud `Retry-After` header (Fase 6). `default-features = false` (NO
# `clock`) keeps this crate PURE — it never reads the wall clock itself; callers
# pass `now: NaiveDateTime` / `now_ms` in (mirrors Electron `scheduler.ts`). The
# `src-tauri` shell owns `Local::now()`.
# `alloc` (NOT `clock`) enables the String-returning formatters (e.g.
# `to_rfc3339_opts`) the unit tests use, without pulling the wall clock — so the
# crate stays pure AND `cargo test -p sundayrec-core` compiles standalone (without
# it, the method only resolves under workspace feature-unification with src-tauri).
chrono = { version = "0.4", default-features = false, features = ["serde", "alloc"] }
# Robust parsing of the OS power-tool text output the wake module (Fase 5.2)
# consumes — `pmset -g sched`, `powercfg -waketimers`, `pmset -g batt`.
regex = "1"
# PKCE for the OAuth flow (Fase 6): the code-challenge is the base64url-encoded
# SHA-256 of the verifier (RFC 7636). Pure, no I/O — the `src-tauri` shell
# generates the random verifier; this crate only does the deterministic
# challenge derivation and the base64url-encoding used across the cloud module.
sha2 = "0.10"
base64 = "0.22"
# Canonical cross-app wire contracts (Rust mirror of @sunday/contracts). The
# StageManifest + MediaHandoff/deep-link shapes this crate produces/parses are
# CANONICAL there; we converge onto them so they cannot silently drift from the
# SundayStage producer / SundayEdit parser. Distributed by git tag (same
# mechanism as `sunday-auth` in src-tauri) so the crate builds standalone — a
# path dep would break a single-repo checkout. Pure serde, no Tauri/I/O, so it
# is safe in this GUI-free core. For local platform co-dev, override with a
# `[patch]` in .cargo/config.toml.
sunday-contracts = { git = "https://github.com/richardfossland/sunday-platform.git", tag = "v0.4.1" }
